[package]
name = "my_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
rcf = { path = "./RCF" }
serde = { version = "1.0.23", features = ["derive"] }
